# crackhash-back

./: .gitignore  Dockerfile.celery  Dockerfile.manager  README.md  docker-compose.yaml  main.py  pyproject.toml
app/api/: apps.py  models.py  serializers.py  services.py  tasks.py  views.py
app/api/management/commands/: requeue_tasks.py
app/api/migrations/: 0001_initial.py
app/crackhash_back/: celery.py  settings.py  urls.py  wsgi.py
crackhash_back/: manage.py
crackhash_back/api/: models.py  tasks.py  views.py
crackhash_back/crackhash_back/: asgi.py  celery.py  settings.py  urls.py
crackhash_back_mongo/crackhash_back/: settings.py
