[project]
name = "crackhash-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.3",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "markdown>=3.10.2",
    "redis>=7.4.0",
]
